--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,10 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       -
-        name: Build and test
+        name: Build
         uses: docker/build-push-action@v5
         with:
           context: .
-          target: test
           load: true
       -
         name: Build and push
