--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
     commands:
       - echo "the build phase begins"
       # - echo `pwd`
-      - npm run build
+      - npm start
       # - echo `ls -la`
 
   post_build:
@@ -26,5 +26,4 @@ artifacts:
     - server/**/*
     - nginx/*
     - scripts/*
-    - docker-compose.yaml
     - Dockerfile
